package v1

import (
	"context"
	"emshop/internal/app/pkg/options"
	"emshop/pkg/log"
)

// DTMManager DTM分布式事务管理器
type DTMManager struct {
	dtmServer   string
	paymentSrv  string
	orderSrv    string
	inventorySrv string
	logisticsSrv string
}

// NewDTMManager 创建DTM事务管理器
func NewDTMManager(dtmOpts *options.DtmOptions) *DTMManager {
	return &DTMManager{
		dtmServer:    dtmOpts.GrpcServer,
		paymentSrv:   "discovery:///emshop-payment-srv",
		orderSrv:     "discovery:///emshop-order-srv", 
		inventorySrv: "discovery:///emshop-inventory-srv",
		logisticsSrv: "discovery:///emshop-logistics-srv",
	}
}

// ProcessOrderSubmission 处理订单提交分布式事务
// 流程: 创建订单(待支付状态) → 创建支付订单 → 预留库存
func (dm *DTMManager) ProcessOrderSubmission(ctx context.Context, req *OrderSubmissionRequest) error {
	log.Infof("开始订单提交分布式事务, 订单号: %s", req.OrderSn)

	// TODO: 完整的DTM实现需要正确的protobuf消息类型
	// 当前版本只做日志记录，实际DTM集成需要更多配置
	
	// 模拟事务步骤
	log.Infof("步骤1: 创建订单(待支付状态) - 订单号: %s", req.OrderSn)
	log.Infof("步骤2: 创建支付订单 - 金额: %.2f", req.Amount)
	log.Infof("步骤3: 预留库存 - 商品数量: %d", len(req.GoodsDetail))

	log.Infof("订单提交分布式事务结构验证成功, 订单号: %s", req.OrderSn)
	return nil
}

// ProcessPaymentSuccess 处理支付成功分布式事务
// 流程: 确认支付 → 更新订单状态为已支付 → 确认扣减库存 → 创建物流订单
func (dm *DTMManager) ProcessPaymentSuccess(ctx context.Context, req *PaymentSuccessRequest) error {
	log.Infof("开始支付成功分布式事务, 支付单号: %s", req.PaymentSn)

	// TODO: 完整的DTM实现需要正确的protobuf消息类型
	// 当前版本只做日志记录，实际DTM集成需要更多配置
	
	// 模拟事务步骤
	thirdPartySn := ""
	if req.ThirdPartySn != nil {
		thirdPartySn = *req.ThirdPartySn
	}
	
	log.Infof("步骤1: 确认支付成功 - 第三方支付单号: %s", thirdPartySn)
	log.Infof("步骤2: 更新订单状态为已支付 - 订单号: %s", req.OrderSn)
	log.Infof("步骤3: 确认扣减库存 - 订单号: %s", req.OrderSn)
	log.Infof("步骤4: 创建物流订单 - 收货人: %s, 地址: %s", req.ReceiverName, req.ReceiverAddress)

	log.Infof("支付成功分布式事务结构验证成功, 支付单号: %s", req.PaymentSn)
	return nil
}

// 请求结构定义
type OrderSubmissionRequest struct {
	OrderSn       string                `json:"order_sn"`
	UserID        int32                 `json:"user_id"`
	Amount        float64               `json:"amount"`
	PaymentMethod int32                 `json:"payment_method"`
	GoodsDetail   []GoodsDetailItem     `json:"goods_detail"`
	Address       string                `json:"address"`
}

type PaymentSuccessRequest struct {
	PaymentSn        string            `json:"payment_sn"`
	OrderSn          string            `json:"order_sn"`
	UserID           int32             `json:"user_id"`
	ThirdPartySn     *string           `json:"third_party_sn"`
	LogisticsCompany int32             `json:"logistics_company"`
	ShippingMethod   int32             `json:"shipping_method"`
	ReceiverName     string            `json:"receiver_name"`
	ReceiverPhone    string            `json:"receiver_phone"`
	ReceiverAddress  string            `json:"receiver_address"`
	Items            []LogisticsItem   `json:"items"`
}

type GoodsDetailItem struct {
	Goods int32 `json:"goods"`
	Num   int32 `json:"num"`
}

type LogisticsItem struct {
	GoodsID  int32   `json:"goods_id"`
	Name     string  `json:"goods_name"`
	Quantity int32   `json:"quantity"`
	Weight   float64 `json:"weight"`
	Volume   float64 `json:"volume"`
}