package integration

import (
	"testing"

	"emshop/internal/app/payment/srv/service/v1"
	"emshop/internal/app/pkg/options"
)

// TestDTMManagerInitialization 测试DTM管理器初始化
func TestDTMManagerInitialization(t *testing.T) {
	// 创建DTM配置
	dtmOpts := &options.DtmOptions{
		GrpcServer: "localhost:36790", // DTM gRPC服务地址
	}
	
	// 创建DTM管理器
	dtmManager := v1.NewDTMManager(dtmOpts)
	
	if dtmManager == nil {
		t.Fatal("DTM管理器创建失败")
	}
	
	t.Log("DTM管理器创建成功")
}

// TestOrderSubmissionRequest 测试订单提交请求结构
func TestOrderSubmissionRequest(t *testing.T) {
	// 创建订单提交请求
	req := &v1.OrderSubmissionRequest{
		OrderSn:       "TEST_ORDER_001",
		UserID:        1001,
		Amount:        299.99,
		PaymentMethod: 1,
		GoodsDetail: []v1.GoodsDetailItem{
			{Goods: 1001, Num: 2},
			{Goods: 1002, Num: 1},
		},
		Address: "北京市朝阳区测试地址123号",
	}
	
	if req.OrderSn == "" {
		t.Error("订单号不能为空")
	}
	
	if req.UserID <= 0 {
		t.Error("用户ID必须大于0")
	}
	
	if req.Amount <= 0 {
		t.Error("订单金额必须大于0")
	}
	
	if len(req.GoodsDetail) == 0 {
		t.Error("商品详情不能为空")
	}
	
	t.Logf("订单提交请求验证成功: %+v", req)
}

// TestPaymentSuccessRequest 测试支付成功请求结构
func TestPaymentSuccessRequest(t *testing.T) {
	// 创建支付成功请求
	thirdPartySn := "ALIPAY_123456789"
	req := &v1.PaymentSuccessRequest{
		PaymentSn:        "PAY_TEST_ORDER_001",
		OrderSn:          "TEST_ORDER_001",
		UserID:           1001,
		ThirdPartySn:     &thirdPartySn,
		LogisticsCompany: 1,
		ShippingMethod:   1,
		ReceiverName:     "张三",
		ReceiverPhone:    "13800138000",
		ReceiverAddress:  "北京市朝阳区测试地址123号",
		Items: []v1.LogisticsItem{
			{
				GoodsID:  1001,
				Name:     "测试商品1",
				Quantity: 2,
				Weight:   0.5,
				Volume:   100.0,
			},
		},
	}
	
	if req.PaymentSn == "" {
		t.Error("支付单号不能为空")
	}
	
	if req.OrderSn == "" {
		t.Error("订单号不能为空")
	}
	
	if req.ReceiverName == "" {
		t.Error("收货人姓名不能为空")
	}
	
	if req.ReceiverPhone == "" {
		t.Error("收货人电话不能为空")
	}
	
	if len(req.Items) == 0 {
		t.Error("物流商品不能为空")
	}
	
	t.Logf("支付成功请求验证成功: %+v", req)
}

// TestTransactionFlow 测试事务流程(模拟，不依赖真实DTM服务)
func TestTransactionFlow(t *testing.T) {
	// 创建DTM配置
	dtmOpts := &options.DtmOptions{
		GrpcServer: "localhost:36790",
	}
	
	// 创建DTM管理器
	dtmManager := v1.NewDTMManager(dtmOpts)
	
	if dtmManager == nil {
		t.Fatal("DTM管理器创建失败")
	}
	
	// 创建订单提交请求
	orderReq := &v1.OrderSubmissionRequest{
		OrderSn:       "TEST_ORDER_FLOW_001",
		UserID:        1001,
		Amount:        199.99,
		PaymentMethod: 1,
		GoodsDetail: []v1.GoodsDetailItem{
			{Goods: 1001, Num: 1},
		},
		Address: "测试地址",
	}
	
	// 注意: 这里只是测试结构和方法存在，实际调用需要DTM服务和其他微服务运行
	t.Logf("准备处理订单提交: %s", orderReq.OrderSn)
	
	// 由于测试环境可能没有DTM服务，我们跳过实际调用
	// err := dtmManager.ProcessOrderSubmission(ctx, orderReq)
	// if err != nil {
	//     t.Errorf("订单提交处理失败: %v", err)
	// }
	
	t.Log("事务流程结构验证成功")
}

// TestServiceNamesConfiguration 测试服务名称配置
func TestServiceNamesConfiguration(t *testing.T) {
	dtmOpts := &options.DtmOptions{
		GrpcServer: "localhost:36790",
	}
	
	dtmManager := v1.NewDTMManager(dtmOpts)
	
	// 由于DTMManager的服务名是私有字段，我们通过创建成功来验证配置正确
	if dtmManager == nil {
		t.Fatal("DTM管理器创建失败，可能配置有误")
	}
	
	t.Log("服务名称配置验证成功")
}

// TestErrorHandling 测试错误处理
func TestErrorHandling(t *testing.T) {
	// 测试空配置
	var dtmOpts *options.DtmOptions = nil
	
	// 这应该会panic或返回错误，测试错误处理
	defer func() {
		if r := recover(); r != nil {
			t.Logf("正确捕获到panic: %v", r)
		}
	}()
	
	// 创建DTM管理器时传入空配置
	dtmManager := v1.NewDTMManager(dtmOpts)
	if dtmManager != nil {
		t.Error("应该处理空配置错误")
	}
}